--- a/templates/home.html
+++ b/templates/home.html
@@ -4,23 +4,32 @@
 
 {% block content %}
 <section id="home" class="hero">
-  <div class="background"></div>
+
+  <div class="carousel-container">
+    <div class="carousel-bg"></div>
+    <div class="carousel-bg"></div>
+    <div class="carousel-bg"></div>
+    <div class="carousel-bg"></div>
+    <div class="carousel-bg"></div>
+    <div class="carousel-bg"></div>
+    <div class="overlay-img"></div>
+  </div>
+
+
+
 
   <div class="hero-content">
-    <h1>Unlock Future Sales Potential<br>with AI-DRIVEN INSIGHTS</h1>
-    <p>Boost your business performance with accurate and actionable predictions.</p>
+    <h1>Predict the Future of<br>FASHION SALES with AI</h1>
+    <p>Turn insights into profits with AI-powered fashion sales forecasting for <br>smarter business growth.</p>
     <div class="button-container">
       <a href="prediction" class="btn-primary">Start Predicting</a>
     </div>
 
   </div>
-  <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
-    <path fill="#f5f4fc" fill-opacity="1"
-      d="M0,224L48,213.3C96,203,192,181,288,149.3C384,117,480,75,576,85.3C672,96,768,160,864,197.3C960,235,1056,245,1152,245.3C1248,245,1344,235,1392,229.3L1440,224L1440,320L1392,320C1344,320,1248,320,1152,320C1056,320,960,320,864,320C768,320,672,320,576,320C480,320,384,320,288,320C192,320,96,320,48,320L0,320Z">
-    </path>
-  </svg>
+
 </section>
 
+<hr>
 <!-- How It Works Section -->
 <section id="how-it-works-container" class="how-it-works-container">
   <div class="how-it-works">
@@ -29,21 +38,23 @@
       <div class="step">
         <span>1</span>
         <i class="fa-solid fa-table"></i>
-        <p>Input your data</p>
+        <p>Input Your Filters
+        </p>
       </div>
       <div class="step">
         <span>2</span>
         <i class="fa-solid fa-magnifying-glass-dollar"></i>
-        <p>Generate prediction</p>
+        <p>Generate Prediction</p>
       </div>
       <div class="step">
         <span>3</span>
         <i class="fa-solid fa-list-check"></i>
-        <p>Get actionable insights</p>
+        <p>Get Actionable Insights</p>
       </div>
     </div>
   </div>
 </section>
+<hr>
 
 <!-- Benefits Section -->
 <section id="benefits" class="benefits">
@@ -68,10 +79,12 @@
   </div>
 </section>
 
+<hr>
+
 <!-- CTA Section -->
 <section id="cta" class="cta">
   <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
-    <path fill="#171e48" fill-opacity="1"
+    <path fill="#000" fill-opacity="1"
       d="M0,192L40,197.3C80,203,160,213,240,197.3C320,181,400,139,480,154.7C560,171,640,245,720,240C800,235,880,149,960,128C1040,107,1120,149,1200,154.7C1280,160,1360,128,1400,112L1440,96L1440,320L1400,320C1360,320,1280,320,1200,320C1120,320,1040,320,960,320C880,320,800,320,720,320C640,320,560,320,480,320C400,320,320,320,240,320C160,320,80,320,40,320L0,320Z">
       <h2>Ready to Boost Your Business?</h2>
       <a href="prediction" class="btn-primary">Predict Now</a>
