--- a/static/css/predict.css
+++ b/static/css/predict.css
@@ -5,11 +5,11 @@
 }
 
 body {
-    font-family: 'Poppins', sans-serif;
+    font-family: 'Chakra Petch', sans-serif;
     background-color: #f9fafb;
     margin: 0;
     padding: 0;
-    font-family: "Winky Sans", sans-serif;
+
 }
 
 :root {
@@ -18,7 +18,7 @@ body {
     --raisin-black: #30292f;
     --paynes-gray: #5d737e;
     --white: #fcfcfc;
-    --heading-colour: #171e48;
+    --heading-colour: #000;
 }
 
 /* ✅ Form Styling */
@@ -49,9 +49,10 @@ body {
     }
 
     & .pred-background {
-        background-image: url(/static/images/predict-form-bg.png);
+        background-image: url(/static/images/bgimage.jpg);
         background-repeat: no-repeat;
         background-size: cover;
+        background-position: center;
         box-shadow: rgba(50, 50, 93, 0.25) 0px 30px 60px -12px inset, rgba(0, 0, 0, 0.3) 0px 18px 36px -18px inset;
         position: absolute;
         top: 0;
@@ -60,15 +61,16 @@ body {
         height: 100%;
         z-index: 0;
         border-radius: 10px;
-        filter: blur(3px);
-        -webkit-filter: blur(3px);
+        filter: brightness(25%) blur(1px);
+        -webkit-filter: brightness(25%) blur(1px);
 }
 }
 
 .chart-container {
     width: 100%;
-   /* Adjust width as needed */
-    height: 35rem; /* Ensure there's enough space */
+    /* Adjust width as needed */
+    height: 35rem;
+    /* Ensure there's enough space */
     margin: 20px auto;
     grid-column: span 3;
 }
@@ -195,21 +197,23 @@ button:hover {
     width: 100%;
     color: white;
     border-radius: 5px;
-    /*Smoothtransition*/max-height: 0;
+    /*Smooth transition*/
+    max-height: 0;
     opacity: 0;
     overflow: hidden;
     visibility: hidden;
-    transition: max-height 0.4s ease-in-out,opacity 0.4s ease-in-out, visibility 0.5s;
+    transition: max-height 0.4s ease-in-out, opacity 0.4s ease-in-out, visibility 0.5s;
     z-index: 1;
-    -webkit-transition: max-height 0.4s ease-in-out,opacity 0.4s ease-in-out, visibility 0.5s;
-    -moz-transition: max-height 0.4s ease-in-out,opacity 0.4s ease-in-out, visibility 0.5s;
-    -ms-transition: max-height 0.4s ease-in-out,opacity 0.4s ease-in-out, visibility 0.5s;
-    -o-transition: max-height 0.4s ease-in-out,opacity 0.4s ease-in-out, visibility 0.5s;
+    -webkit-transition: max-height 0.4s ease-in-out, opacity 0.4s ease-in-out, visibility 0.5s;
+    -moz-transition: max-height 0.4s ease-in-out, opacity 0.4s ease-in-out, visibility 0.5s;
+    -ms-transition: max-height 0.4s ease-in-out, opacity 0.4s ease-in-out, visibility 0.5s;
+    -o-transition: max-height 0.4s ease-in-out, opacity 0.4s ease-in-out, visibility 0.5s;
 }
 
 /* When Dropdown is Open */
 .dropdown-list.show {
-    max-height: 300px;  /* Adjust as needed */
+    max-height: 300px;
+    /* Adjust as needed */
     opacity: 1;
     visibility: visible;
 }
@@ -248,9 +252,9 @@ li {
     width: 100%;
     margin-left: auto;
     margin-right: auto;
-    
+
     z-index: 2;
-  
+
     grid-template-columns: repeat(3, 1fr);
     gap: 1rem;
 }
@@ -332,20 +336,24 @@ td {
     background: rgba(249, 249, 249, 0.005);
     box-shadow: rgba(0, 0, 0, 0.16) 0px 3px 6px, rgba(0, 0, 0, 0.23) 0px 3px 6px;
     color: white;
-   
+
 }
 
 /* Darker background for even rows */
 #monthly-results tbody tr:nth-child(even) {
-    background: rgba(249, 249, 249, 0.03); /* Slightly darker */
+    background: rgba(249, 249, 249, 0.03);
+    /* Slightly darker */
 }
+
 #monthly-results tbody tr:nth-child(even):hover {
-    background: rgba(249, 249, 249, 0.05); /* Slightly darker */
+    background: rgba(249, 249, 249, 0.05);
+    /* Slightly darker */
 }
 
 /* Row hover effect */
 #monthly-results tbody tr:hover {
-    background: rgba(249, 249, 249, 0.1); /* Highlight on hover */
+    background: rgba(249, 249, 249, 0.1);
+    /* Highlight on hover */
 }
 
 
