--- a/static/css/predict.css
+++ b/static/css/predict.css
@@ -29,7 +29,7 @@ body {
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    margin: 40px auto;
+    margin: 0 auto;
     width: 100%;
     padding: 5rem 2rem;
     border-radius: 16px;
@@ -142,32 +142,42 @@ ul {
 }
 
 button {
-    background-color: black;
-    color: white;
-    padding: 12px;
-    border: none;
+    padding: 1rem 3rem;
+    /*background-color: #8b6fdb;
+    */
+    background-color: rgb(0, 0, 0, 0.5);
+    color: #ffffff;
+    width: 100%;
+    font-weight: 700;
+    border: 1px solid rgba(255, 255, 255, 0.18);
+    box-shadow: rgba(0, 0, 0, 0.16) 0px 3px 6px, rgba(0, 0, 0, 0.23) 0px 3px 6px;
     border-radius: 5px;
+    font-size: 1.5rem;
     cursor: pointer;
+    text-decoration: none;
+    transition: all 0.2s;
+    -webkit-transition: all 0.2s;
+    -moz-transition: all 0.2s;
+    -ms-transition: all 0.2s;
+    -o-transition: all 0.2s;
     grid-column: span 2;
-    font-size: 1.2rem;
-    border-radius: 10px;
-    transition: all 0.1s ease-in;
-    -webkit-transition: all 0.1s ease-in;
-    -moz-transition: all 0.1s ease-in;
-    -ms-transition: all 0.1s ease-in;
-    -o-transition: all 0.1s ease-in;
-    -webkit-border-radius: 10px;
-    -moz-border-radius: 10px;
-    -ms-border-radius: 10px;
-    -o-border-radius: 10px;
+    border-bottom: 3px solid black;
+    -webkit-border-radius: 5px;
+    -moz-border-radius: 5px;
+    -ms-border-radius: 5px;
+    -o-border-radius: 5px;
 }
 
+
+
 button:hover {
-
-    scale: 1.03;
-    background-color: rgba(0, 0, 0, 0.5);
-
-
+    transform: scale(1.02);
+    background-color: rgba(0, 0, 0, 0.8);
+    border-bottom: 3px solid white;
+    -moz-transform: scale(1.02);
+    -ms-transform: scale(1.02);
+    -o-transform: scale(1.02);
+    -webkit-transform: scale(1.02);
 }
 
 /* ✅ Custom Dropdown Styling */
