--- a/templates/base.html
+++ b/templates/base.html
@@ -25,8 +25,8 @@
         <div class="logo">StylePredict</div>
         <nav class="nav">
             <a href="{{ url_for('home') }}">Home</a>
-            <!-- <a href="insights">Insights</a>
-            <a href="#data">Historical Data</a> -->
+            <a href="/insights">Insights</a>
+            <!-- <a href="#data">Historical Data</a> -->
             <a href="/about-us">About</a>
             <a href="/contact">Contact</a>
         </nav>
