--- a/static/css/home.css
+++ b/static/css/home.css
@@ -562,24 +562,133 @@ i {
     margin-top: 0.5rem;
 }
 
-/* Responsive Design */
-@media (max-width: 768px) {
-    .footer-container {
-        flex-direction: column;
-        text-align: center;
-    }
 
-    .footer-column {
-        text-align: center;
-    }
-}
 
 
 /* === Responsive Design === */
-@media (max-width: 768px) {
 
-    .steps,
-    .grid {
+@media screen and (max-width: 412px) {
+    
+    .header {
         flex-direction: column;
+        padding: 1rem;
+        text-align: center;
+    }
+
+    .nav {
+        margin-top: 1rem;
+        display: flex;
+        flex-direction: row;
+        gap: 1rem;
+    }
+
+    .hero {
+        height:60vh;
+        padding: 4rem 1rem;
+        text-align: center;
+    }
+
+    .hero-content {
+        width: 90%;
+        padding: 2rem;
+    }
+
+    .hero h1 {
+        font-size: 1.5rem;
+        line-height: 1.8rem;
+        letter-spacing: 0.1rem;
+    }
+
+    .hero p{
+        font-size: 1rem;
+        margin: -1.2rem 0rem 1rem 0rem;
+        color: white;
+        width: 100%;
+    }
+
+    .button-container{
+        width: 80%;
+        padding: 0rem;
+        height: 1.8rem;
+    }
+
+    .btn-primary{
+      
+        padding: 0.3rem 3rem;
+        font-size: 0.8rem;
+    }
+
+    .how-it-works-container{
+        padding: 0rem 2rem;
+        margin: 0;
+        background-color: white;
+        box-shadow: none;
+    }
+
+    .how-it-works h2 {
+        font-size: 1.7rem;
+        margin-bottom: 1rem;
+    }
+
+    .steps{
+        gap: 1rem;
+        flex-direction: column;
+    }
+
+    .step{
+        width: 17rem;
+        height: 5rem;
+        gap: 0.5rem;
+        margin: 0.2rem auto;
+        flex-direction: row;
+        padding: 1rem 0rem;
+
+        & i {
+            font-size: 1rem;
+        }
+    }
+
+    .benefits{
+        padding: 4rem 1rem;
+    }
+    .benefits h2{
+        font-size: 1.7rem;
+        margin-bottom: 1rem;
+    }
+
+    .benefits .grid{
+        grid-template-columns: 1fr;
+        width: 90%;
+        gap: 1rem;
+    }
+
+    .benefit{
+        padding: 1.5rem 1rem;
+        height: 8rem;
+        width: 100%;
+        gap: 0.5rem;
+
+        & h3{
+            font-size: 1.1rem;
+        }
+
+        & p {
+            font-size: 1rem;
+        }
+    }
+
+    .cta{
+        margin-top: 5rem;
+
+        & svg{
+            top: -3.7rem;
+        }
+
+        & .btn-primary{
+            width: 80%;
+        }
+    }
+    .carousel-container{
+        height: 50vh;
     }
 }
