--- a/static/css/about-us.css
+++ b/static/css/about-us.css
@@ -81,18 +81,31 @@ body {
     margin-bottom: 20px;
     color: #fff;
   }
-  
   .btn-primary {
-    background: #00ffcc;
+    padding: 1rem 3rem;
+    /*background-color: #8b6fdb;
+    */
+    background-color: rgb(255, 255, 255, 0.5);
     color: #000;
-    padding: 12px 25px;
+    font-weight: 700;
+    border: 1px solid rgba(255, 255, 255, 0.18);
+    box-shadow: rgba(0, 0, 0, 0.16) 0px 3px 6px, rgba(0, 0, 0, 0.23) 0px 3px 6px;
+    border-radius: 5px;
+    font-size: 1.5rem;
+    cursor: pointer;
     text-decoration: none;
-    font-weight: bold;
-    font-size: 1.2em;
-    border-radius: 8px;
-    transition: 0.3s ease-in-out;
-    display: inline-block;
-  }
+    transition: all 0.2s;
+    -webkit-transition: all 0.2s;
+    -moz-transition: all 0.2s;
+    -ms-transition: all 0.2s;
+    -o-transition: all 0.2s;
+
+    border-bottom: 3px solid white;
+    -webkit-border-radius: 5px;
+    -moz-border-radius: 5px;
+    -ms-border-radius: 5px;
+    -o-border-radius: 5px;
+}
   
   .btn-primary:hover {
     background: #fff;
@@ -115,4 +128,51 @@ body {
       opacity: 1;
       transform: translateY(0);
     }
+  }
+
+  @media screen and (max-width: 412px) {
+
+
+    .section-header h2{
+      font-size: 2rem;
+    }
+
+    .section-header p{
+      font-size: 1.2rem;
+      margin-top: 1rem;
+    }
+
+
+    .col-lg-6 h3{
+      font-size: 1.5rem;
+
+      & i{
+        font-size: 1.5rem;
+      }
+    }
+    .col-lg-6 p {
+      margin-top: 1rem;
+      font-size: 1rem;
+      letter-spacing: 0.04rem;
+    }
+
+    .about ul li{
+      font-size: 1rem;
+
+      & i{
+        font-size: 1rem;
+        /* margin-right: -0.05rem; */
+      }
+    }
+
+    .cta h2 {
+      font-size: 1.8rem;
+      margin-bottom: 3rem;
+    }
+
+    .cta .btn-primary{
+      font-size: 1.2rem;
+     
+    }
+
   }
