--- a/static/css/contact.css
+++ b/static/css/contact.css
@@ -1,25 +1,34 @@
+/* General Styles */
 body {
-    font-family: 'Chakra Petch', sans-serif;
     background-color: #000;
     color: white;
+    font-family: 'Chakra Petch', sans-serif;
 }
 
-.contact-container {
-    
+.container {
+    max-width: 1200px;
     margin: auto;
-    padding: 2rem ;
-    text-align: center;
+    padding: 20px;
 }
 
-.contact-form{
-    margin-top: 5rem !important;
+.section-header {
+    text-align: center;
+    font-size: 2.5em;
+    margin-bottom: 30px;
+    font-weight: bold;
+}
+
+/* Contact Section */
+.contact-container {
+    margin: auto;
+    padding: 2rem;
+    text-align: center;
 }
 
 .contact-form, .support-section, .feedback-section {
     background: rgba(255, 255, 255, 0.1);
     backdrop-filter: blur(10px);
     padding: 2rem;
-    /* margin-top: 2.5rem; */
     margin: 2.5rem auto;
     border-radius: 10px;
     box-shadow: 0px 4px 10px rgba(255, 255, 255, 0.1);
@@ -41,7 +50,6 @@ body {
 .form-group {
     margin-bottom: 1rem;
     text-align: left;
-  
 }
 
 label {
@@ -89,17 +97,6 @@ button.btn-primary:hover {
     justify-content: center;
 }
 
-#email{
-    text-decoration: underline;
-    color: rgb(63, 140, 255);
-    letter-spacing: 0.08rem;
-
-}
-
-select option {
-
-    color: black;
-}
 .contact-section .social-links a {
     margin: 0 10px;
     font-size: 1.8rem;
@@ -112,6 +109,53 @@ select option {
     color: #00ffcc;
 }
 
+#email {
+    text-decoration: underline;
+    color: rgb(63, 140, 255);
+    letter-spacing: 0.08rem;
+}
+
+select option {
+    color: black;
+}
+
 .feedback-form select {
     cursor: pointer;
+}
+
+/* Media Queries */
+@media screen and (max-width: 768px) {
+    .contact-form, .support-section, .feedback-section {
+        width: 80%;
+    }
+}
+
+@media screen and (max-width: 576px) {
+    .contact-form, .support-section, .feedback-section {
+        width: 90%;
+    }
+    .contact-section h1, .contact-section h2 {
+        font-size: 2rem;
+        margin-top: 1.5rem;
+        margin-bottom: 1rem;
+    }
+    .contact-section p {
+        font-size: 1.2rem;
+        width: 100%;
+        margin-bottom: 1.5rem;
+    }
+    .form-group {
+        margin-bottom: 0.5rem;
+    }
+    input, textarea, select {
+        padding: 10px;
+        font-size: 0.9rem;
+    }
+    button.btn-primary {
+        padding: 0.8rem 2.5rem;
+        font-size: 1rem;
+    }
+    .contact-section .social-links a {
+        font-size: 1.5rem;
+    }
 }
